@@ -21,6 +21,7 @@
   * Remove Object#extend - just use extend($this, 'Class1', 'Class2')
   * Update Object#extract_call_arguments
   * Add Object#method_extended
+  * Refactored the global extend method and added extend_method and extend_property methods
 
 2009-03-11 - Sean Huber (shuber@huberry.com)
   * Rename to phby
